--- a/assignment02/src/pc/assignment02/src/main/resources/assignment02/Main.fxml
+++ b/assignment02/src/pc/assignment02/src/main/resources/assignment02/Main.fxml
@@ -1,3 +1,21 @@
+<!--
+    Main Layout of the Application's Operator Dashboard.
+    It Contains the Following Components:
+
+    - A Title Label
+    - Two Vertical Boxes, each Containing:
+        - Progress Bar Title Label
+        - Progress Bar Component
+        - Progress Bar Value Label
+    - A Horizontal Box Containing Two Buttons:
+        - Empty Button
+        - Restore Button
+
+    The layout is designed to display the waste level and temperature of a machine, along with buttons to empty and restore the machine.
+
+    @author Marco Marrelli
+-->
+
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
@@ -34,8 +52,5 @@
             <Button fx:id="emptyButton" focusTraversable="false" style="-fx-font-size: 14px; -fx-min-width: 100px; -fx-min-height: 40px" text="EMPTY" />
             <Button fx:id="restoreButton" focusTraversable="false" style="-fx-font-size: 14px; -fx-min-width: 100px; -fx-min-height: 40px" text="RESTORE" />
         </HBox>
-        <!--
-            <Label fx:id="statusLabel" alignment="CENTER" style="-fx-font-size: 14px" text="System Status: Normal" />
-         -->
     </children>
 </VBox>
